[package]
name = "taskflow"
version = "0.1.0"
description = "TaskFlow - 任务进度管理器"
authors = ["you"]
edition = "2021"

[lib]
name = "taskflow_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
strip = true
lto = "thin"
codegen-units = 16

# 快速开发构建配置
[profile.dev]
opt-level = 0
debug = false
